Fix border-radius and overflow on the cards

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,5 +1,6 @@
 .cards {
   flex-direction: column;
+  overflow: auto;
 }
 
 .card {
