--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ main {
   align-items: center;
   border-radius: 10px;
   margin: 2rem;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .card {
